<resources>
    <string name="app_name">Fishing</string>

    <string name="title_weather">Погода</string>
    <string name="title_wiki">Wiki</string>
    <string name="title_discussions">Обсуждения</string>
    <string name="title_profile">Профиль</string>

    <string name="now">Сейчас</string>
    <string name="max">Максимум</string>
    <string name="min">Минимум</string>
    <string name="chance">Вероятность осадков</string>
    <string name="wind">Ветер</string>
    <string name="humidity">Влажность</string>
    <string name="pressure">Давление</string>
    <string name="dawn">Рассвет</string>
    <string name="sunrise">Восход</string>
    <string name="sunset">Закат</string>
    <string name="twilight">Сумерки</string>
    <string name="hourly_weather">Почасовой прогноз</string>
    <string name="ten_day_weather">Прогноз погоды на 10 дней</string>
    <string name="weather_temperature_hint">Температура воздуха</string>
    <string name="amount_of_precipitation">Количество осадков, мм</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="wind_gust">Порывы ветра</string>
    <string name="dew_point">Точка росы</string>

    <string name="open_meteo_com">open-meteo.com</string>

    <string name="wind_icon_description">Направление ветра</string>
    <string name="weather_icon_description">Значок погоды</string>
    <string name="chat_send_icon_description">Значок отправки сообщения</string>

    <string name="chat_menu_copy">Копировать текст</string>
    <string name="chat_menu_deselect">Снять выделение</string>
    <string name="recomendation">Советы для начинающих</string>
    <string name="profile_login_guest">Вы вошли как гость</string>
    <string name="profile_login">Вход</string>
    <string name="profile_logout">Выход</string>
    <string name="profile_registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
</resources>