<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weather">

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.salfetka.fishing.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/navigation_wiki"
        android:name="com.salfetka.fishing.ui.wiki.WikiFragment"
        android:label="@string/title_wiki"
        tools:layout="@layout/fragment_wiki" />

    <fragment
        android:id="@+id/navigation_discussions"
        android:name="com.salfetka.fishing.ui.discussions.DiscussionsFragment"
        android:label="@string/title_discussions"
        tools:layout="@layout/fragment_wiki" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.salfetka.fishing.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>