<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.profile.RegistrationDialogFragment">

    <EditText
        android:id="@+id/registration_dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/registration_dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/registration_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registration_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_registration" />
</LinearLayout>